# Homework_django_1

./: .env_example  README.md  data.json  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blog_date_of_creation.py  0003_alter_blog_is_published.py  0004_alter_blog_count_of_view.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: fill.py  filldb.py
catalog/migrations/: 0001_initial.py  0002_alter_category_options_alter_product_options_and_more.py  0002_category_created_at_alter_product_date_of_creation_and_more.py  0002_version.py  0003_version_number_of_version_version_title_of_version.py  0004_product_owner.py  0005_product_is_published.py  0006_alter_product_options.py
catalog/templates/catalog/: base.html  category_list.html  contacts.html  homepage.html  product.html  product_confirm_delete.html  product_form.html  products.html
catalog/templatetags/: media_tags.py
config/: settings.py  urls.py
users/: forms.py  models.py  views.py
