[tool.poetry]
name = "homework_django_1"
version = "0.1.0"
description = ""
authors = ["Pshenichnyy Alexander"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.7"
Pillow = "^10.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
